# cookiecutter-electron-vue

./: .editorconfig  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: test_bake_project.py  test_bake_template.py
{{cookiecutter.project_slug}}/: .editorconfig  README.md  electron-builder.yml  index.html  package.json  vite.config.ts  vitest.workspace.ts
{{cookiecutter.project_slug}}/src/: main.ts
{{cookiecutter.project_slug}}/src/main/: index.ts
{{cookiecutter.project_slug}}/src/renderer/router/: index.ts
{{cookiecutter.project_slug}}/tests/: setup.ts  vitest.shared.ts
{{cookiecutter.project_slug}}/tests/electron/: vitest.config.unit.ts
{{cookiecutter.project_slug}}/tests/renderer/: vitest.config.unit.ts
{{cookiecutter.project_slug}}/tests/renderer/unit/: example.spec.ts
